// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportSection component correctly passes isFirstSection prop to collapsible component as defaultOpen false 1`] = `
<div
  className="pgn_collapsible shadow collapsible-card"
  open={undefined}
>
  <div
    aria-expanded={false}
    className="collapsible-trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <span>
      Download Reports
    </span>
    <span
      className="ml-2"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-plus fa-w-14 "
        data-icon="plus"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </span>
  </div>
  <div
    className="pgn-transition-replace-group position-relative"
    style={
      Object {
        "height": null,
      }
    }
  >
    <div
      style={
        Object {
          "padding": ".1px 0",
        }
      }
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`ReportSection component correctly passes isFirstSection prop to collapsible component as defaultOpen true 1`] = `
<div
  className="pgn_collapsible shadow collapsible-card is-open"
  open={undefined}
>
  <div
    aria-expanded={true}
    className="collapsible-trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <span>
      Download Reports
    </span>
    <span
      className="ml-2"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-minus fa-w-14 "
        data-icon="minus"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </span>
  </div>
  <div
    className="pgn-transition-replace-group position-relative"
    style={
      Object {
        "height": null,
      }
    }
  >
    <div
      style={
        Object {
          "padding": ".1px 0",
        }
      }
    >
      <div
        className="collapsible-body"
      >
        <div
          className="container"
        >
          <div>
            <a
              href="example.com/one-report"
            >
              one-report
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ReportSection component doesn't render contents when empty program key is passed in 1`] = `null`;

exports[`ReportSection component doesn't render contents when no program data is passed in 1`] = `null`;

exports[`ReportSection component renders contents when program data is passed in 1`] = `
<div
  className="pgn_collapsible shadow collapsible-card is-open"
  open={undefined}
>
  <div
    aria-expanded={true}
    className="collapsible-trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <span>
      Download Reports
    </span>
    <span
      className="ml-2"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-minus fa-w-14 "
        data-icon="minus"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </span>
  </div>
  <div
    className="pgn-transition-replace-group position-relative"
    style={
      Object {
        "height": null,
      }
    }
  >
    <div
      style={
        Object {
          "padding": ".1px 0",
        }
      }
    >
      <div
        className="collapsible-body"
      >
        <div
          className="container"
        >
          <div>
            <a
              href="example.com/first-report"
            >
              first-report
            </a>
          </div>
          <div>
            <a
              href="example.com/second-report"
            >
              second-report
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ReportSection component renders with the most basic props passed to it 1`] = `null`;
